# sdl_rendering_poc

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  game.cc  game.h  main.cc  main.cpp
src/Building/: Building.cpp  Building.h  BuildingConfig.h  BuildingManager.cpp  BuildingManager.h
src/UI/: Color.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h
src/UIFramework/: SDLUI.cpp  SDLUI.h  UI.cpp  UI.h
src/building/: building.cc  building.h  building_config.h  building_manager.cc  building_manager.h
src/ui/: color.h  layer.cc  layer.h  layer_manager.cc  layer_manager.h
src/ui_framework/: sdl_ui.cc  sdl_ui.h  ui.h
